Update model installer files to version 2.6.0